# listen-to-me

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.de.md  README.md  SCRATCHPAD.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/skills/ci/: SKILL.md
.claude/skills/done/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/rollback/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/stuck/: SKILL.md
.github/workflows/: ci.yml  release.yml
agent_docs/: adr_template.md  api-reference.md  backlog_process.md  diagram_prompt.md  hooks_catalog.md  mcp_catalog.md  memory_process.md  refactoring_guidelines.md  review_process.md
docs/: ARCHITECTURE.mmd
docs/adr/: 0001-record-architecture-decisions.md
docs/research/: 2026-07-faster-stt-and-translation.md
scripts/: make_icon.py
src/listen_to_me/: __init__.py  __main__.py  app.py  assistant.py  audio.py  autostart.py  choices.py  config.py  diagnostics.py  help_content.py  history.py  hotkeys.py  icons.py  injector.py  integrations.py  keymap.py  livetype.py  netutil.py  onboarding.py  overlay.py  qtutil.py  selftest.py  settings_ui.py  singleinstance.py  theme.py  transcriber.py  transcriber_openvino.py  transcriber_parakeet.py  tray.py  updater.py  voice_mic_widget.py  widgets.py
